<resources>
    <string name="app_name">Votar FMS</string>
    <string name="nueva_batalla">Puntuar Nueva Batalla</string>
    <string name="ver_votaciones_anteriores">Ver Votaciones anteriores</string>
    <string name="tablas_fms">Tablas fms</string>
    <string name="calificanos">Calificanos!</string>
    <string name="quitar_anuncios">Quitar Anuncios</string>
    <string name="selecciona_la_liga">Selecciona la liga</string>
    <string name="selecciona_al_primer_mc">Primer MC</string>
    <string name="selecciona_al_segundo_mc">Segundo MC</string>
    <string name="cancelar">Cancelar</string>
    <string name="ir_a_votar">Ir a votar</string>
    <string name="escena">Escena</string>
    <string name="flow">Flow</string>
    <string name="skills">Skills</string>
    <string name="total">Total</string>
    <string name="inicial_points">0.0</string>
    <string name="siguiente_ronda">Siguiente Ronda</string>
    <string name="aplicar_selecci_n">Aplicar selección</string>
    <string name="actualizar_seleccion">Actualizar Selección</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="tem_ticas">Temáticas - Ida</string>
    <string name="tem_ticas_vuelta">Temáticas - Vuelta</string>
    <string name="random_mode">Random Mode</string>
    <string name="round_a_sangre">Round a Sangre - Ida</string>
    <string name="round_a_sangre_vuelta">Round a Sangre - Vuelta</string>
    <string name="round_deluxe">Round Deluxe</string>
    <string name="ver_resultado">Ver Resultado</string>
    <string name="resultado_final">Resultado Final</string>
    <string name="temas">Temas</string>
    <!--<string name="sangre">Sangre</string> -->
    <string name="random">Random</string>
    <string name="deluxe">Deluxe</string>
    <string name="_0">0</string>
    <string name="ganador_xxx">Ganador: xxx</string>
    <string name="ir_a_r_plica">Ir a réplica</string>
    <string name="guardar_puntuaci_n">guardar puntuación</string>
    <string name="ganador">\"Ganador: \"</string>
    <string name="tematicas_total">Temáticas</string>
    <string name="sangre">Sangre</string>
    <string name="aceptar">Aceptar</string>
    <string name="objetos_final">Objetos Final</string>
    <string name="segundo_round">Segundo Round</string>
</resources>