<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_selectLeague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:text="@string/selecciona_la_liga"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_selectMcOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_apply_selection"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="43dp"
        android:text="@string/selecciona_al_primer_mc"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_selectMcTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_selectMcOne"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/selecciona_al_segundo_mc"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_apply_selection"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="17dp"
        android:background="@color/colorAccent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/cancelar"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_goToVote"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_apply_selection"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:background="@color/colorAccent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/ir_a_votar"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_league"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinner_mcOne"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@+id/btn_apply_selection"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="11dp" />

    <Spinner
        android:id="@+id/spinner_mcTwo"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@+id/spinner_mcOne"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="11dp" />

    <Button
        android:id="@+id/btn_apply_selection"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_league"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorAccent"
        android:text="@string/aplicar_selecci_n"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>