<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/ladrillos"
    tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/circulo_celeste"
        android:drawableLeft="@drawable/plusbtn"
        android:onClick="newPunctuation"
        android:text="@string/nueva_batalla"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/circulo_amarillo"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:onClick="seeLastElections"
        android:text="@string/ver_votaciones_anteriores"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/circulo_rojo"
        android:drawableLeft="@android:drawable/ic_dialog_dialer"
        android:onClick="watchTables"
        android:text="@string/tablas_fms"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/circulo_verde"
        android:drawableLeft="@android:drawable/btn_star"
        android:onClick="rateUs"
        android:text="@string/calificanos"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/circulo_marron"
        android:drawableLeft="@android:drawable/stat_sys_download_done"
        android:onClick="removeAds"
        android:text="@string/quitar_anuncios"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="182dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/gallo" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3984939241340358/5768903673">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>